@@ -450,6 +450,7 @@ GW_CHANGELOGS = "   - Fix chatframe moving and resizing error\n" .. GW_CHANGELOG
 GW_CHANGELOGS = "\nFIXED\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "   - Added possibly to track WQ's\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "   - Added possibly to show more then one WQ\n" .. GW_CHANGELOGS
+GW_CHANGELOGS = "   - Added new skins\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "\nNEW\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "\n\n5.1.14\n\n" .. GW_CHANGELOGS
 
