@@ -283,6 +283,8 @@ GW_DEFAULT["LFGLISTAPPLICATIONDIALOG_SKIN_ENABLED"] = true
 GW_DEFAULT["LFGDUNGEONREADYDIALOG_SKIN_ENABLED"] = true
 GW_DEFAULT["LFGINVITEPOPUP_SKIN_ENABLED"] = true
 GW_DEFAULT["READYCHECKLISTENERFRAME_SKIN_ENABLED"] = true
+GW_DEFAULT["TALKINGHEAD_SKIN_ENABLED"] = true
+GW_DEFAULT["TIMERTRACKER_SKIN_ENABLED"] = true
 
 --GW_DEFAULT["USE_BATTLEGROUND_HUD"] = false
 
